fix for IE11 flexboxes on small devices

--- a/less/elements/marketing.less
+++ b/less/elements/marketing.less
@@ -13,6 +13,11 @@
     box-shadow: 0 0 1px rgba(0, 0, 0, 0);
     .hovershadow;
 }
+@media (max-width: @screen-sm) {
+    .marketing-block {
+        display: block;
+    }
+}
 
 .marketing-block h3 {
     color: @themecolor;
